# ml_deploy_template

./: .pre-commit-config.yaml  Dockerfile  deploy.sh  main.py  pyproject.toml  requirements.txt
modules/utils/: log_conf.yml  logger.py
tests/: test_main.py
